--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -100,11 +100,12 @@ layout: default
   	</div>
   </div>
   
-  <div class="row align-center clients__qualities">
+  <div class="row align-center small-up-1 medium-up-2 large-up-4" data-equalizer>
     {% for client in page.clients-clients %}
-      <div class="small-12 medium-expand columns text-center">
-        <h4>{{ quality.title }}</h4>
-        <p>{{ quality.text | markdownify}}</p>
+      <div class="columns text-center">
+        <div class="callout" data-equalizer-watch>
+          <h4>{{ client }}</h4>
+        </div>
       </div>
     {% endfor %}
   </div>
@@ -119,6 +120,20 @@ layout: default
   
 </section>
 <!-- End Clients -->
+
+
+<!-- Call to Action -->
+<section class="cta" id="cta">
+  
+  <div class="row align-center clients__intro">
+  	<div class="large-8 columns text-center">
+      <h2>{{page.cta-title}}</h2>
+  	</div>
+  </div>
+  
+</section>
+<!-- End Call to Action -->
+
 
 
 
