--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,17 @@
-<div class="row small-collapse expanded align-middle align-justify">
-  
+<div class="row small-collapse expanded align-middle align-center">
   <div class="shrink columns">
-    <a href="mailto:{{site.email}}">{{site.email}}</a>
+    <ul class="menu align-right">
+    <li><a href="http://garethjohnsdesign.com">LinkedIn</a></li>
+    <li><a href="http://garethjohnsdesign.com">Colophon</a></li>
+    </ul>
   </div>
-  
-  <div class="shrink columns">
-    <a href="http://garethjohnsdesign.com">Colophon</a>
-  </div>
+</div>
 
+<div class="row small-collapse expanded align-middle align-center">
+  <div class="shrink columns">
+    <ul class="menu align-right">
+    <li><a href="http://garethjohnsdesign.com">LinkedIn</a></li>
+    <li><a href="http://garethjohnsdesign.com">Colophon</a></li>
+    </ul>
+  </div>
 </div>
