--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -37,7 +37,7 @@ layout: default
 	</div>
 </div>
 
-  <div class="row hero__text">
+  <div class="row hero__text wow fadeIn">
   	<div class="medium-6 large-6 columns">
       <h1>{{page.hero-title}}</h1>
       <p>{{page.hero-text}}</p>
@@ -51,15 +51,15 @@ layout: default
 <!-- About -->
 <section class="about" id="about">
   
-  <div class="row align-center about__intro">
+  <div class="row align-center about__intro wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
-    	<h6 class="section__title">About</h6>
+    	<h6 class="section__title show-for-small-only">About</h6>
       <h2>{{page.about-title}}</h2>
       <p>{{page.about-text}}</p>
   	</div>
   </div>
   
-  <div class="row align-center about__qualities">
+  <div class="row align-center about__qualities wow fadeInUp">
     {% for quality in page.about-qualities %}
       <div class="small-12 medium-6 large-expand columns text-center">
         <svg class="icon icon-{{ quality.icon }} icon-qualities"><use xlink:href="/assets/icons/symbol-defs.svg#icon-{{ quality.icon }}"></use></svg>
@@ -75,15 +75,15 @@ layout: default
 <!-- Speaking -->
 <section class="speaking" id="speaking">
   
-  <div class="row align-center speaking__intro">
+  <div class="row align-center speaking__intro wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
-    	<h6 class="section__title">Speaking</h6>
+    	<h6 class="section__title show-for-small-only">Speaking</h6>
       <h2>{{page.speaking-title}}</h2>
       <p>{{page.speaking-text}}</p>
   	</div>
   </div>
   
-  <div class="row align-center speaking__qualities">
+  <div class="row align-center speaking__qualities wow fadeInUp">
     {% for quality in page.speaking-qualities %}
       <div class="small-12 medium-6 large-expand columns text-center">
         <h4>{{ quality.title }}</h4>
@@ -92,14 +92,14 @@ layout: default
     {% endfor %}
   </div>
   
-  <div class="row align-center speaking__companies">
+  <div class="row align-center speaking__companies wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
     	<p>{{page.speaking-brands}}</p>
       <img src="/uploads/logos.svg">
   	</div>
   </div>
   
-  <div class="row align-center speaking__extra">
+  <div class="row align-center speaking__extra wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
       <p>{{page.speaking-extra}}</p>
       <a class="button" href="#">Contact</a>
@@ -113,15 +113,15 @@ layout: default
 <!-- Testimonials -->
 <section class="testimonials" id="testimonials">
   
-  <div class="row align-center testimonials__intro">
+  <div class="row align-center testimonials__intro wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
-    	<h6 class="section__title">Testimonials</h6>
+    	<h6 class="section__title show-for-small-only">Testimonials</h6>
       <h2>{{page.clients-title}}</h2>
       <p>{{page.clients-text}}</p>
   	</div>
   </div>
   
-  <div class="row align-center small-up-1 medium-up-2 large-up-4" data-equalizer>
+  <div class="row align-center small-up-1 medium-up-2 large-up-4 wow fadeInUp" data-equalizer>
     {% for client in page.clients-clients %}
       <div class="columns text-center">
         <div class="callout" data-equalizer-watch>
@@ -133,7 +133,7 @@ layout: default
     {% endfor %}
   </div>
   
-  <div class="row align-center testimonials__logos">
+  <div class="row align-center testimonials__logos wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
         <ul class="menu align-center">
               <li><a href="{{link.href}}">{{link.title}}</a></li>
@@ -147,15 +147,15 @@ layout: default
 <!-- Consultant -->
 <section class="consultant" id="consulting">
   
-  <div class="row align-center consultant__intro">
+  <div class="row align-center consultant__intro wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
-    	<h6 class="section__title">Consulting</h6>
+    	<h6 class="section__title show-for-small-only">Consulting</h6>
       <h2>{{page.consultant-title}}</h2>
       <p>{{page.consultant-text}}</p>
   	</div>
   </div>
   
-  <div class="row align-center consultant__companies">
+  <div class="row align-center consultant__companies wow fadeInUp">
     {% for company in page.consultant-company %}
       <div class="small-12 medium-6 columns text-center consultant__company">
         <h4>{{ company.company }}</h4>
@@ -172,17 +172,17 @@ layout: default
 <!-- Book -->
 <section class="book" id="book">
   
-  <div class="row align-center book__intro">
+  <div class="row align-center book__intro wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
-    	<h6 class="section__title">Book</h6>
+    	<h6 class="section__title show-for-small-only">Book</h6>
       <h2>{{page.book-title}}</h2>
       <p>{{page.book-text}}</p>
       <a class="button" href="#">Order Now</a>
-      <a class="button" href="#">Request Sample</a>
+      <a class="button" data-open="exampleModal1">Request Sample</a>
   	</div>
   </div>
   
-  <div class="row align-center book__reviews">
+  <div class="row align-center book__reviews wow fadeInUp">
     {% for review in page.book-reviews %}
       <div class="small-12 medium-6 large-expand columns text-center">
         <div class="book__review__stars text-center"><img src="/uploads/stars.svg"></div>
@@ -198,7 +198,7 @@ layout: default
 
 <!-- Call to Action -->
 <section class="cta" id="cta">
-  <div class="row align-center cta__intro">
+  <div class="row align-center cta__intro wow fadeInUp">
   	<div class="medium-10 large-8 columns text-center">
       <h2>{{page.cta-title}}</h2>
       <a href="mailto:{{site.email}}" class="button">Contact Jamal</a>
@@ -208,7 +208,7 @@ layout: default
 <!-- End Call to Action -->
 
 <section class="footer">
-<div class="row small-collapse expanded align-middle align-center footer__links">
+<div class="row small-collapse expanded align-middle align-center footer__links wow fadeInUp">
   <div class="shrink columns">
     <ul class="menu align-center">
     <li><a href="{{site.social.linkedin}}">LinkedIn</a></li>
@@ -216,9 +216,14 @@ layout: default
     </ul>
   </div>
 </div>
-<div class="row align-center footer__copyright">
+<div class="row align-center footer__copyright wow fadeInUp">
   <div class="shrink columns">
     <a href="http://earnstudios.com">© EARN Studios Limited</a>
   </div>
 </div>
 </section>
+
+
+<div class="reveal" id="exampleModal1" data-reveal>
+{% include bookrequest.html %}
+</div>
