--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -177,7 +177,7 @@ layout: default
     	<h6 class="section__title show-for-small-only">Book</h6>
       <h2>{{page.book-title}}</h2>
       <p>{{page.book-text}}</p>
-      <a class="button" href="#">Order Now</a>
+      <a class="button" href="https://www.amazon.co.uk/Brand-Love-Build-Worth-Talking-ebook/dp/B00VBPBU1G" target="_blank">Order Now</a>
       <a class="button" data-open="exampleModal1">Request Sample</a>
   	</div>
   </div>
