--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -173,13 +173,18 @@ layout: default
 <section class="book" id="book">
   
   <div class="row align-center book__intro wow fadeInUp">
-  	<div class="medium-10 large-8 columns text-center">
+  	<div class="small-12 medium-12 large-6 columns">
     	<h6 class="section__title show-for-small-only">Book</h6>
       <h2>{{page.book-title}}</h2>
       <p>{{page.book-text}}</p>
       <a class="button" href="https://www.amazon.co.uk/Brand-Love-Build-Worth-Talking-ebook/dp/B00VBPBU1G" target="_blank">Order Now</a>
       <a class="button" data-open="exampleModal1">Request Sample</a>
   	</div>
+  	
+  	<div class="small-12 medium-12 large-6 columns">
+      <img src="/uploads/book.jpg">
+  	</div>
+  	
   </div>
   
   <div class="row align-center book__reviews wow fadeInUp">
