--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,10 +4,12 @@ layout: default
 
 <!-- Hero -->
 <section class="hero" id="hero" style="background-image: url({{page.hero-image}})">
+
 <div class="row expanded">
 	<div class="large-12 columns">
-
-    <div class="top-bar row small-collapse expanded align-middle align-justify">
+    
+    <div data-sticky-container>
+    <div class="top-bar row small-collapse expanded align-middle align-justify" data-sticky data-options="marginTop:0;" style="width:100%">
       
       <div class="shrink columns top-bar-menu show-for-large">
         <ul class="menu align-right">
@@ -29,6 +31,7 @@ layout: default
       </button>
       <!-- End Mobile Menu -->
       </div>
+      </div>
       
       
     
@@ -44,6 +47,7 @@ layout: default
       <a href="mailto:{{site.email}}" class="button">Contact Jamal</a>
   	</div>
   </div>
+  
   
 </section>
 <!-- End Hero -->
