--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -34,6 +34,10 @@ img {
 outline: 0;
 }
 
+[data-sticky] {
+  width: 100%;
+}
+
 // 2. Typography
 
 .uppercase {
@@ -62,6 +66,29 @@ i, cite, em, var, address, dfn {
 }
 
 // Navigation
+
+/*
+.top-bar {
+transition-duration: 1s;
+}
+*/
+
+.top-bar {
+ margin-top: 0rem !important; 
+ padding: 0.5rem 1.5rem 0.75rem 1.5rem;
+ transition: background-color 0.5s ease;
+ top: 0px !important;
+ @include breakpoint(small only) {
+    padding: 0.75rem 1.5rem 0.75rem 1.5rem;
+  }
+}
+
+.show {
+  background-color: $color--black-pearl;
+ @include breakpoint(small only) {
+  background-color: transparent;
+  }
+}
 
 .top-bar-title {
   font-family: $header-font-family;
@@ -107,7 +134,7 @@ section {
 
 
 .hero {
-  padding-top: 1rem;
+  padding-top: 0rem;
   padding-bottom: 2rem;
   background-position: center center;
   background-size: cover;
