Hero Image Change

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,9 +35,9 @@ layout: default
 
     
       <div class="row hero__text wow fadeIn">
-      	<div class="medium-6 large-6 columns">
+      	<div class="small-8 medium-6 large-6 columns">
           <h1>{{page.hero-title}}</h1>
-          <p>{{page.hero-text}}</p>
+          <p class="show-for-medium">{{page.hero-text}}</p>
           <a href="mailto:{{site.email}}" class="button">Contact Jamal</a>
       	</div>
       </div>
