--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -139,7 +139,7 @@ section {
   background-position: center center;
   background-size: cover;
   p {
-    color: $color--aqua-haze;
+    color: $color--white;
   }
   h1 {
     color: $color--white;
