--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -84,6 +84,9 @@ transition-duration: 1s;
 }
 
 .show {
+  .top-bar-title {
+  font-size: 2rem;
+  }
   background-color: $color--black-pearl;
  @include breakpoint(small only) {
   background-color: transparent;
@@ -136,7 +139,7 @@ section {
 .hero {
   padding-top: 0rem;
   padding-bottom: 2rem;
-  background-position: center center;
+  background-position: center top;
   background-size: cover;
   p {
     color: $color--white;
@@ -206,7 +209,7 @@ section {
 // 5. Testimonials
 
 .testimonials {
-  background-color: $color--aqua-haze;
+  background-color: $color--carrara;
 }
 
 .testimonials__intro {
@@ -228,12 +231,19 @@ section {
 }
 
 .consultant__company h4 {
+  color: $color--royal-blue;
+  padding-bottom: 1rem;
   margin-bottom: 0rem;
 }
 
-.consultant__job-title {
-  color: $color--royal-blue;
-  padding-bottom: 1rem;
+.consultant__company img {
+  padding: 1rem;
+  filter: grayscale(1);
+  transition: $primary-transition;
+}
+
+.consultant__company img:hover {
+  filter: grayscale(0);
 }
 
 // 5. Book
