--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -180,9 +180,12 @@ $hr-border: 1px solid $medium-gray;
 $hr-margin: rem-calc(20) auto;
 $list-lineheight: $paragraph-lineheight;
 $list-margin-bottom: $paragraph-margin-bottom;
-$list-style-type: disc;
-$list-style-position: outside;
-$list-side-margin: 1.25rem;
+// $list-style-type: disc;
+$list-style-type: circle;
+// $list-style-position: outside;
+$list-style-position: inside;
+// $list-side-margin: 1.25rem;
+$list-side-margin: 0rem;
 $list-nested-side-margin: 1.25rem;
 $defnlist-margin-bottom: 1rem;
 $defnlist-term-weight: $global-weight-bold;
