--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -70,6 +70,25 @@ layout: default
 </section>
 <!-- End About -->
 
+<!-- Hero Images -->
+<section class="hero-images" id="hero-images">
+  <div class="row align-center hero-images__title wow fadeInUp">
+  	<div class="medium-10 large-8 columns text-center">
+      <h2>{{page.hero-images-title}}</h2>
+  	</div>
+  </div>
+  
+  <div class="row align-center hero-images__images wow fadeInUp">
+    {% for image in page.hero-images %}
+      <div class="small-6 medium-3 columns text-center">
+        <img src="{{image}}">
+      </div>
+    {% endfor %}
+  </div>
+  
+</section>
+<!-- End Hero Images -->
+
 <!-- Speaking -->
 <section class="speaking" id="speaking">
   
@@ -182,14 +201,15 @@ layout: default
   	<div class="medium-10 large-8 columns text-center">
     	<h6 class="section__title show-for-small-only">Consulting</h6>
       <h2>{{page.consultant-title}}</h2>
+      <p>{{page.consultant-text}}</p>
   	</div>
   </div>
   
   <div class="row align-center consultant__companies wow fadeInUp">
     {% for company in page.consultant-company %}
-      <div class="small-12 medium-6 columns text-center consultant__company">
+      <div class="small-6 medium-3 columns text-center consultant__company">
         <h4>{{ company.company }}</h4>
-        <a href="{{company.link}}"><img src="{{company.image}}"></a>
+        <a href="{{company.link}}" target="_blank"><img src="{{company.image}}"></a>
         <p>{{ company.text | markdownify}}</p>
         <a class="hollow button secondary" href="{{ company.link }}" target="_blank">Learn More</a>
       </div>
