--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -25,3 +25,13 @@ Single-colored icons can be modified like so:
   font-size: 1.5rem;
   color: $color--zircon;
 }
+
+.icon-play-circle {
+  font-size: 3rem;
+  fill: $color--royal-blue;
+  transition: $primary-transition;
+}
+
+.icon-play-circle:hover {
+  fill: $color--zircon;
+}
