Make Video Link Stand Out More

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -113,15 +113,8 @@ layout: default
   	<div class="medium-10 large-8 columns text-center">
     	<p>{{page.speaking-brands}}</p>
       <img src="/uploads/logos.svg">
-      <p><a data-open="video">Watch Jamal's Latest Presentation</a></p>
-      <a data-open="video"><svg class="icon icon-play-circle"><use xlink:href="/assets/icons/symbol-defs.svg#icon-play-circle"></use></svg></a>
-  	</div>
-  </div>
-  
-  <div class="row align-center speaking__extra wow fadeInUp">
-  	<div class="medium-10 large-8 columns text-center">
-      <p>{{page.speaking-extra}}</p>
-      <a class="button" href="#">Contact</a>
+      <a data-open="video"><svg class="icon icon-play-circle"><use xlink:href="/assets/icons/symbol-defs.svg#icon-play-circle"></use></svg></a><br>
+      <a class="button" data-open="video">Watch Jamal's Latest Presentation</a>
   	</div>
   </div>
   
