--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -30,6 +30,7 @@ Single-colored icons can be modified like so:
   font-size: 3rem;
   fill: $color--royal-blue;
   transition: $primary-transition;
+  margin-bottom: 1rem;
 }
 
 .icon-play-circle:hover {
