Add Markdownify to Consultant

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -194,7 +194,7 @@ layout: default
   	<div class="medium-10 large-8 columns text-center">
     	<h6 class="section__title show-for-small-only">Consulting</h6>
       <h2>{{page.consultant-title}}</h2>
-      <p>{{page.consultant-text}}</p>
+      {{page.consultant-text | markdownify}}
   	</div>
   </div>
   
