--- a/_includes/bookrequest.html
+++ b/_includes/bookrequest.html
@@ -1,4 +1,4 @@
-<form action="https://formspree.io/jamal@earnstudios.com" method="post" target="_blank" data-abide novalidate>
+<form action="https://formspree.io/jamal@jamalbenmiloud.com" method="post" target="_blank" data-abide novalidate>
 
 <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i> There are some errors in your form.</p>
