Added — Typekit Link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   <link rel="manifest" href="/assets/favicons/manifest.json">
   <meta name="theme-color" content="#f2f2f2">
   
+	<link rel="stylesheet" href="https://use.typekit.net/nnw1ejd.css">
   <link rel="stylesheet" type="text/css" href="{{ "/assets/css/app.css" | prepend: site.baseurl }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
