--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -8,10 +8,7 @@
 }
 
 @font-face {
-  font-family: 'AdelleSans';
-  src: 
-  url('../fonts/AdelleSans.woff') format('woff'), 
-  url('../fonts/AdelleSans.ttf')  format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-family: adelle-sans,sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
