--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -73,7 +73,7 @@ $black: $color--black;
 $white: $color--white;
 $body-background: $white;
 $body-font-color: $color--dolphin;
-$body-font-family: 'AdelleSans', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'adelle-sans', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
